@@ -68,3 +68,9 @@ class Gem::RemoteSourceException < Gem::Exception; end
 
 class Gem::VerificationError < Gem::Exception; end
 
+##
+# Raised to indicate that a system exit should occur with the specified
+# exit_code
+class Gem::SystemExitException < SystemExit
+  attr_accessor :exit_code
+end
